syntax = "proto3";

import "proto/entities.proto";

package auth; 


service AuthService {
  rpc Registration (RegistrationMsg) returns (ResUserMsg) {}
  rpc Login (LoginMsg) returns (ResUserMsg) {}
  rpc RepeatAuthCode (RepeatVerificationCodeMsg) returns (entities.Empty) {}
  rpc VerifyAuthCode (VerifyAuthCodeMsg) returns (ResUserMsg) {}
  rpc Me (GetMeMsg) returns (ResUserMsg) {}
}

message RegistrationMsg {
    optional string email = 1;
    optional string phoneNumber = 2;
    optional int64 tgId = 3;
    string userName = 4;
    string userSurname = 5;
    optional string userLastName = 6;
    string password = 7; 
}

message LoginMsg {
    optional string email = 1;
    optional string phoneNumber = 2;
}

message RepeatVerificationCodeMsg {
    optional string email = 1;
    optional string phoneNumber = 2; 
}

message VerifyAuthCodeMsg {
    string userId = 1;
    int32 authCode = 2;
}

message GetMeMsg {
    string userId = 1;
}

// Response Messages

message ResUserMsg {
   entities.UserEntity user = 1;
   int64 timestamp = 2;
}

